2015-03-23  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/attribute.c (Generate8BIMAttribute): Silence Coverity
	10195 "Argument cannot be negative".

	* Magick++/lib/Image.cpp (syncPixels): Silence Coverity 44722
	"Unchecked return value".
	(fontTypeMetrics): Silence Coverity 44721 "Unchecked return
	value".

	* magick/render.c (ConvertPathToPolygon): Silence Coverity 10120
	"Dereference after null check".

	* magick/effect.c (EmbossImage): Silence Coverity 10114
	"Dereference after null check".
	(AdaptiveThresholdImage): Silence Coverity 10118 "Explicit null
	dereferenced".

	* coders/msl.c (MSLPushImage): Silence Coverity 10128 "Dereference
	after null check".

	* magick/render.c (DrawPolygonPrimitive): Silence Coverity 10136
	"Dereference after null check".

	* wand/drawing_wand.c (DrawSetStrokeDashArray): Silence Coverity
	10117 "Dereference after null check".

	* magick/draw.c (DrawSetStrokeDashArray): Silence Coverity 10150
	"Dereference after null check".

	* wand/drawing_wand.c (DrawPushGraphicContext): Silence Coverity
	10151 "Dereference after null check".

2015-03-22  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/meta.c (parse8BIM): Silence Coverity 10159 "Explicit null
	dereferenced".
	(parse8BIMW): Silence Coverity 10144 "Explicit null dereferenced".

	* coders/uil.c (WriteUILImage): Silence Coverity 10202
	"Dereference after null check".  In fact, UIL output was not
	working at all due to this bug.

	* magick/xwindow.c (MagickXMakeImage): Silence Coverity 44727
	"Dereference after null check".

	* Magick++/lib/Image.cpp (colorMapSize): Silence Coverity 44728
	"Dereference after null check".

	* coders/vid.c (ReadVIDImage): Silence Coverity 44730 "Explicit
	null dereferenced".

	* coders/mpc.c (ReadMPCImage): Silence Coverity 44732 "Dereference
	after null check".

	* Magick++/lib/Image.cpp (signature): Silence Coverity 44735
	"Dereference null return value".

	* coders/ps.c (ReadPSImage): Ghostscript options concatenation